# OpenStarbound

./: .clang-format  .clangd  .gitignore  .gitmodules  .luarc.json  ADDITIONAL_MODERNIZATION_OPPORTUNITIES.md  AGENTS.md  COMPLETE_PROJECT_SUMMARY.md  CPP26_MODERNIZATION_ANALYSIS.md  Dockerfile  MODERN_CPP_PATTERNS_ANALYSIS.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  README.md  RUST_SERVER.md  flake.nix
planet_editor/: .gitignore  Cargo.toml  README.md
planet_editor/examples/: empty_planet.json  sample_terrain.json
planet_editor/src/: btree.rs  editor.rs  main.rs  render.rs  world.rs  worldfile.rs
rust-core/: Cargo.toml  README.md
rust-core/src/: lib.rs
rust_server/: Cargo.toml  PHASE2.md  PHASE3.md  PHASE4.md  PHASE5.md  PHASE6.md  PHASE7.md  PHASE8.md  PHASE9.md  README.md  build.sh
rust_server/examples/: simple_client.rs
rust_server/src/: main.rs  protocol.rs  server.rs  world.rs
source/: CMakeLists.txt  CMakePresets.json
source/application/: CMakeLists.txt  StarApplication.cpp  StarApplication.hpp  StarApplicationController.hpp  StarDesktopService_pc_steam.hpp  StarMainApplication.hpp  StarMainApplication_sdl.cpp  StarP2PNetworkingService_pc.cpp  StarP2PNetworkingService_pc.hpp  StarPlatformServices_pc.cpp  StarPlatformServices_pc.hpp  StarRenderer.cpp  StarRenderer.hpp  StarRenderer_opengl.cpp  StarRenderer_opengl.hpp  StarStatisticsService_pc_steam.cpp  StarStatisticsService_pc_steam.hpp  StarTextureAtlas.hpp  StarUserGeneratedContentService_pc_steam.cpp  StarUserGeneratedContentService_pc_steam.hpp
source/base/: CMakeLists.txt  StarAnimatedPartSet.cpp  StarAnimatedPartSet.hpp  StarAssetSource.hpp  StarAssets.cpp  StarAssets.hpp  StarBlocksAlongLine.hpp  StarCellularLightArray.cpp  StarCellularLightArray.hpp  StarCellularLighting.cpp  StarCellularLighting.hpp  StarCellularLiquid.hpp  StarConfiguration.cpp  StarConfiguration.hpp  StarDirectoryAssetSource.cpp  StarDirectoryAssetSource.hpp  StarMemoryAssetSource.cpp  StarMemoryAssetSource.hpp  StarMixer.cpp  StarMixer.hpp  StarPackedAssetSource.cpp  StarPackedAssetSource.hpp  StarRootBase.cpp  StarRootBase.hpp  StarVersionOptionParser.cpp  StarVersionOptionParser.hpp  StarWorldGeometry.cpp  StarWorldGeometry.hpp
source/client/: CMakeLists.txt  StarClientApplication.cpp  StarClientApplication.hpp  StarRenderingLuaBindings.cpp  StarRenderingLuaBindings.hpp
source/core/: CMakeLists.txt  StarAStar.hpp  StarAlgorithm.hpp  StarArray.cppm  StarArray.hpp  StarAssetPath.cpp  StarAssetPath.hpp  StarAtomicSharedPtr.hpp  StarAudio.cpp  StarAudio.hpp  StarBTree.hpp  StarBTreeDatabase.cpp  StarBTreeDatabase.hpp  StarBiMap.cppm  StarBiMap.hpp  StarBlockAllocator.hpp  StarBuffer.cpp  StarBuffer.cppm  StarBuffer.hpp  StarByteArray.cpp  StarByteArray.cppm  StarByteArray.hpp  StarBytes.cppm  StarBytes.hpp  StarCasting.hpp  StarColor.cpp  StarColor.cppm  StarColor.hpp  StarCompression.cpp  StarCompression.hpp  StarConfig.hpp  StarCurve25519.cpp  StarCurve25519.hpp  StarDataStream.cpp  StarDataStream.cppm  StarDataStream.hpp  StarDataStreamDevices.cpp  StarDataStreamDevices.hpp  StarDataStreamExtra.cppm  StarDataStreamExtra.hpp  (+214 more)
source/frontend/: CMakeLists.txt  StarActionBar.cpp  StarActionBar.hpp  StarAiInterface.cpp  StarAiInterface.hpp  StarBaseScriptPane.cpp  StarBaseScriptPane.hpp  StarBindingsMenu.hpp  StarBookmarkInterface.hpp  StarCharCreation.cpp  StarCharCreation.hpp  StarCharSelection.cpp  StarCharSelection.hpp  StarChat.cpp  StarChat.hpp  StarChatBubbleManager.cpp  StarChatBubbleManager.hpp  StarChatBubbleSeparation.cpp  StarChatBubbleSeparation.hpp  StarCinematic.cpp  StarCinematic.hpp  StarClientCommandProcessor.cpp  StarClipboardLuaBindings.cpp  StarCodexInterface.cpp  StarCodexInterface.hpp  StarConfirmationDialog.cpp  StarConfirmationDialog.hpp  StarContainerInteractor.cpp  StarContainerInteractor.hpp  StarContainerInterface.cpp  StarContainerInterface.hpp  StarCraftingInterface.cpp  StarCraftingInterface.hpp  StarErrorScreen.hpp  StarGraphicsMenu.cpp  StarGraphicsMenu.hpp  StarHttpTrustDialog.hpp  StarInterfaceLuaBindings.cpp  StarInterfaceLuaBindings.hpp  StarInventory.cpp  (+45 more)
source/game/: CMakeLists.txt  StarActorEntity.hpp  StarActorMovementController.cpp  StarActorMovementController.hpp  StarAiDatabase.cpp  StarAiDatabase.hpp  StarAiTypes.hpp  StarAmbient.cpp  StarAmbient.hpp  StarAnimation.cpp  StarAnimation.hpp  StarArmorWearer.cpp  StarArmorWearer.hpp  StarBehaviorDatabase.cpp  StarBehaviorDatabase.hpp  StarBehaviorState.cpp  StarBehaviorState.hpp  StarBiome.cpp  StarBiome.hpp  StarBiomeDatabase.cpp  StarBiomeDatabase.hpp  StarBiomePlacement.cpp  StarBiomePlacement.hpp  StarCelestialCoordinate.cpp  StarCelestialCoordinate.hpp  StarCelestialDatabase.cpp  StarCelestialDatabase.hpp  StarCelestialGraphics.cpp  StarCelestialGraphics.hpp  StarCelestialParameters.cpp  StarCelestialParameters.hpp  StarCelestialTypes.cpp  StarCelestialTypes.hpp  StarChatAction.cpp  StarChatAction.hpp  StarChatProcessor.cpp  StarChatProcessor.hpp  StarChatTypes.cpp  StarChatTypes.hpp  StarClientContext.cpp  (+302 more)
source/json_tool/: CMakeLists.txt  json_tool.cpp  json_tool.hpp
source/mod_uploader/: CMakeLists.txt  StarModUploader.cpp  StarModUploader.hpp
source/platform/: CMakeLists.txt  StarDesktopService.hpp  StarP2PNetworkingService.hpp  StarStatisticsService.hpp  StarUserGeneratedContentService.hpp
source/rendering/: CMakeLists.txt  StarAnchorTypes.cpp  StarAnchorTypes.hpp  StarAssetTextureGroup.cpp  StarAssetTextureGroup.hpp  StarDrawablePainter.cpp  StarDrawablePainter.hpp  StarEnvironmentPainter.cpp  StarEnvironmentPainter.hpp  StarFontTextureGroup.cpp  StarFontTextureGroup.hpp  StarTextPainter.cpp  StarTextPainter.hpp  StarTilePainter.cpp  StarTilePainter.hpp  StarWorldPainter.cpp  StarWorldPainter.hpp
source/server/: CMakeLists.txt  StarServerQueryThread.cpp  StarServerQueryThread.hpp  StarServerRconClient.cpp  StarServerRconClient.hpp  StarServerRconThread.cpp  StarServerRconThread.hpp  main.cpp
source/test/: CMakeLists.txt  StarTestUniverse.cpp  (+18 more)
(+433 files in other folders)
