[package]
name = "planet_editor"
version = "0.1.0"
edition = "2021"
authors = ["OpenStarbound Contributors"]
description = "A planet map editor for Starbound worlds"

[[bin]]
name = "planet_editor"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
anyhow = "1.0"
