[package]
name = "starbound_core"
version = "0.1.0"
edition = "2021"
description = "Core types and utilities for OpenStarbound Rust implementation"
license = "MIT"
authors = ["OpenStarbound Contributors"]
repository = "https://github.com/OpenStarbound/OpenStarbound"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"

[lib]
name = "starbound_core"
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]

[features]
default = []
ffi = []  # Enable FFI bindings for C++ interop
